--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
             q5: "Acute hep C infection",
             q6: "Acetaminophen",
             q7: "acetaminophen",
-            q8: "an active metaboite",
+            q8: "an active metabolite",
             q9: "give N-acetylcysteine to allow binding of the toxic metabolite",
             q10: "Prothrombin time",
             q11: "Arterial pH 7.27",
@@ -931,11 +931,11 @@
             q29: "Hepatitis E virus",
             q30: "Episcleritis",
             q31: "A, D",
-            q32: "A They are common feature of inflammatory bowel disease (Crhons)",
+            q32: "They are common feature of inflammatory bowel disease ( Crhons )",
             q33: "Behcet syndrome",
             q34: "Facial Flushing",
             q35: "Appendix",
-            q36: "Urinary 5 HIAA (hydroxy indole acetic acid)",
+            q36: "Urinary 5 HIAA ( hydroxy indole acetic acid )",
             q37: "Niacin deficiency",
             q38: "Niacin deficiency",
             q39: "Scurvy",
